# django-snomed-ct

./: .gitignore  README.md  pyproject.toml  setup.cfg
snomed_ct/: controlled_natural_language.py  exceptions.py  manager.py  models.py
snomed_ct/management/commands/: create_snomed_ct_reference_set.py  load_snomed_ct_data.py  query_snomed_ct_data.py
snomed_ct/migrations/: 0001_initial.py  0002_install_functions.py  0003_search_view.py
src/snomed_ct/: controlled_natural_language.py  models.py
src/snomed_ct/management/commands/: create_namespace_counter.py  create_snomed_ct_module.py  load_snomed_ct_data.py  query_snomed_ct_data.py
src/snomed_ct/migrations/: 0001_initial.py
