[project]
name = "django-snomed-ct"
description = "A Django App for storing, managing, and querying SNOMED CT by itself or as part of a Django application."

[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]