[metadata]
name = django-snomed-ct
version = 0.5
description = A Django App for storing, managing, and quering the SNOMED Clinical Terms (SNOMED CT) system, an international, medical terminology system and standard, by itself or as part of a Django application.
long_description = file:README.md
long_description_content_type = 'text/x-rst'.
url = https://github.com/chimezie/django-snomed-ct
license = GNU GENERAL PUBLIC LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.10
setup_requires =
    setuptools >= 38.3.0
py_modules=["snomed_ct"], # Name of the python package
package_dir =
    = .
install_requires =
    Django>=3.2